Dodano opis oraz dokonano poprawek
Dodano opis zarządzania w pliku README.md
Zmieniono nazwy pakietów na pisane małymi literami oraz poprawiono błędy w kodzie i usunięto nieużywane funkcje.